Quick fix for bottom links on sidebar, Stopped nav items from shifting, Cursor switches to a pointer in lightbox

--- a/styles/about_styles.css
+++ b/styles/about_styles.css
@@ -10,10 +10,14 @@ h2 {
     margin-bottom: -8px;
 }
 
-section {
-    border: none;
+.bigger-text {
+    font-weight: bold;
 }
 
 p {
     line-height: 24px;
+} 
+
+main {
+    padding-bottom: 48px;
 }
