--- a/styles/lightbox_styles.css
+++ b/styles/lightbox_styles.css
@@ -38,3 +38,7 @@
     width: 5%;
     min-width: 32px;
 }
+
+#close-btn:hover {
+    cursor: pointer;
+}
