--- a/styles/sidebar_styles.css
+++ b/styles/sidebar_styles.css
@@ -53,8 +53,11 @@
 
 .nav-item {
     font-size: 1.5rem;
-    margin-top: 16px;
+    margin-top: 4px; 
     margin-bottom: 0px;
+
+    margin-left: -8px;
+    padding: 8px;
 }
 
 .nav-item a {
@@ -70,8 +73,8 @@
 .selected {
     font-weight: 700;
     background-color: var(--major-point-bg-color);
-    padding: 8px;
-    margin-left: -8px;
+    /*padding: 8px;*/
+    margin-left: 0px;
 
     border-radius: 4px;
     /*text-decoration: underline;*/
@@ -89,8 +92,8 @@
     position: absolute;
     bottom: 24px;
     
-    /*
-    /* margin-top: 25vh; */ /* Do 20 for light/darkmode btn */ 
+    
+    /*margin-top: 25vh; *//* Do 20 for light/darkmode btn */ 
 }
 
 /* Media Queries */
@@ -125,6 +128,11 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 32px;
+    }
+
+    #secondary-links {
+        position: static;
+        margin-top: 10vh;
     }
 
     /*Open Nav Button*/
